--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "description": "Helpers library for Jobber app",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "scripts": {
     "build": "npm run build:cjs && npm run build:esm && tsc --outDir build/src && node scripts/build-package.js",
@@ -18,11 +18,11 @@
     "trailingComma": "es5"
   },
   "keywords": [],
-  "name": "@vmdt03/9-jobber-shared",
+  "name": "@vmdt/9-jobber-shared",
   "author": "",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/vmdt/jobber-shared.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -39,8 +39,15 @@
   },
   "types": "./src/index.d.ts",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.11.0",
+    "cloudinary": "^1.41.1",
     "express": "^4.18.2",
-    "typescript": "^5.3.3"
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "typescript": "^5.3.3",
+    "winston": "^3.11.0",
+    "winston-elasticsearch": "^0.17.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
