--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @vmdt:registry=https://npm.pkg.github.com/vmdt
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=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
